DRAKEN-2970: Add transferdate to billingrecord and update schemajob to use transferdate
